--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -736,6 +736,8 @@
         <item>save</item>
     </string-array>
 
+    <string name="micro_image_activity_title">Capture Face Picture</string>
+
     <string name="connect_job_info_title">Opportunity Details</string>
     <string name="connect_job_info_delivery_detail">Delivery Details</string>
     <string name="connect_job_info_review_delivery">Review the delivery details</string>
